@startuml

title __WHATEVER2D's Class Diagram__\n

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    namespace P2D {
      class TP2D.AnimatedThings {
      }
    }
  }
  

  namespace  {
    namespace P2D {
      class TP2D.Dungeon {
      }
    }
  }
  

  namespace  {
    namespace P2D {
      class TP2D.DynamicThings {
      }
    }
  }
  

  namespace  {
    namespace P2D {
      class TP2D.GameRender {
      }
    }
  }
  

  namespace  {
    namespace P2D {
      class TP2D.Hero {
      }
    }
  }
  

  namespace  {
    namespace P2D {
      class TP2D.HitBox {
      }
    }
  }
  

  namespace  {
    namespace P2D {
      class TP2D.MainInterface {
      }
    }
  }
  

  namespace  {
    namespace P2D {
      enum Orientation {
      }
    }
  }
  

  namespace  {
    namespace P2D {
      class TP2D.SolidThings {
      }
    }
  }
  

  namespace  {
    namespace P2D {
      class TP2D.Things {
      }
    }
  }
  

  namespace  {
    namespace P2D {
      class TP2D.TileManager {
      }
    }
  }
  

  TP2D.AnimatedThings -up-|> TP2D.SolidThings
  TP2D.Dungeon o-- TP2D.TileManager : tileManager
  TP2D.DynamicThings -up-|> TP2D.AnimatedThings
  TP2D.GameRender -up-|> javax.swing.JPanel
  TP2D.GameRender o-- TP2D.Dungeon : dungeon
  TP2D.GameRender o-- TP2D.Hero : hero
  TP2D.Hero -up-|> TP2D.DynamicThings
  TP2D.Hero o-- TP2D.Orientation : orientation
  TP2D.MainInterface .up.|> java.awt.event.KeyListener
  TP2D.MainInterface -up-|> javax.swing.JFrame
  TP2D.MainInterface o-- TP2D.Dungeon : dungeon
  TP2D.MainInterface o-- TP2D.Hero : hero
  TP2D.MainInterface o-- TP2D.GameRender : panel
  TP2D.MainInterface o-- TP2D.TileManager : tileManager
  TP2D.SolidThings -up-|> TP2D.Things
  TP2D.SolidThings o-- TP2D.HitBox : hitBox


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
